--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,15 +1,16 @@
 .SearchBar {
   position: sticky;
   top: 0;
-  padding: 15px 0;
+  padding: 15px 0 5px;
   width: 100%;
-  background-color: rgba(255, 255, 255, .9);
 }
 
 .SearchBar__input {
   width: 100%;
   padding: 5px;
   font-size: 1rem;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  border-radius: 5px;
 }
 
 .SearchBar__buttons {
@@ -23,4 +24,5 @@
   padding: 5px;
   font-size: 1rem;
   border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
 }
