--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,15 @@
-@font-face {
-  font-family: 'Staatliches';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Staatliches Regular'), local('Staatliches-Regular'), url(https://fonts.gstatic.com/s/staatliches/v1/HI_OiY8KO6hCsQSoAPmtMYebvpCfOMPT.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 html, body {
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
