--- a/src/components/MovieDetail/MovieDetail.css
+++ b/src/components/MovieDetail/MovieDetail.css
@@ -19,6 +19,10 @@
   width: 40%;
 }
 
+.MovieDetail__instructions {
+  text-align: center;
+}
+
 .MovieDetail__poster img {
   box-shadow: 0 0 50px rgba(0, 0, 0, .4);
 }
