--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,13 +1,15 @@
 .SearchBar {
   position: sticky;
   top: 0;
-  padding: 15px 0 5px;
+  padding: 15px 25px 5px;
   width: 100%;
+  background: linear-gradient(white 20%, rgba(255,255,255,0));
+  animation: fade-in .3s linear;
 }
 
 .SearchBar__input {
   width: 100%;
-  padding: 5px;
+  padding: 5px 10px;
   font-size: 1rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, .3);
   border-radius: 5px;
@@ -25,4 +27,8 @@
   font-size: 1rem;
   border-radius: 5px;
   box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+}
+
+.SearchBar__buttons button, .SearchBar__input {
+  font-family: 'Staatliches', sans-serif;
 }
