--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,6 +3,6 @@
   overflow: scroll;
   flex-basis: 30%;
   min-width: 300px;
-  padding: 0 15px 15px;
+  padding: 0 0 15px;
   position: relative;
 }
