implemented search and clearSearch on frontend

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -27,6 +27,7 @@
   font-size: 1rem;
   border-radius: 5px;
   box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  cursor: pointer;
 }
 
 .SearchBar__buttons button, .SearchBar__input {
