--- a/src/components/ActivityIndicator/ActivityIndicator.css
+++ b/src/components/ActivityIndicator/ActivityIndicator.css
@@ -1,3 +1,38 @@
 .ActivityIndicator {
   animation: fade-in .3s linear;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  animation: fade-in .2s linear;
+}
+
+.ActivityIndicator__spinner {
+  border: 4px solid rgb(119, 247, 252);
+  border-bottom: none;
+  border-right: none;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin .5s linear infinite;
+}
+
+.ActivityIndicator__spinner--small {
+  border-left-width: 3px;
+  border-top-width: 3px;
+  width: 40px;
+  height: 40px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
