--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,3 +6,11 @@
   padding: 0 0 15px;
   position: relative;
 }
+
+@media only screen and (max-width: 500px) {
+  .Sidebar {
+    height: auto;
+    min-height: 100vh;
+    overflow: auto;
+  }
+}
