--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,3 +5,10 @@
   height: 100vh;
   overflow: hidden;
 }
+
+@media only screen and (max-width: 500px) {
+  .App {
+    display: block;
+    height: auto;
+  }
+}
