--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -28,9 +28,19 @@
   font-size: 1rem;
   border-radius: 5px;
   box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  background-color: white;
   cursor: pointer;
 }
 
 .SearchBar__buttons button, .SearchBar__input {
   font-family: 'Staatliches', sans-serif;
+}
+
+@media only screen and (max-width: 500px) {
+  .SearchBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
 }
