bigger Poster in responsive MovieDetail

--- a/src/components/MovieDetail/MovieDetail.css
+++ b/src/components/MovieDetail/MovieDetail.css
@@ -41,7 +41,8 @@
     display: none;
   }
   .MovieDetail--visible {
-    display: block;
+    display: flex;
+    flex-flow: column nowrap;
     position: fixed;
     top: 0;
     right: 0;
@@ -49,7 +50,7 @@
     bottom: 0;
     background-color: white;
     z-index: 300;
-    padding: 50px 5px 10px;
+    padding: 50px 10px 10px;
   }
   .MovieDetail__title {
     font-size: 2rem;
@@ -58,6 +59,12 @@
     display: block;
   }
   .MovieDetail__poster {
-    margin: 0 10px 0 5px;
+    margin: 10px 0;
+    order: 6;
+    align-self: center;
+    width: 95%;
+  }
+  .MovieDetail__info {
+    margin: 8px 0; 
   }
 }
