removed fixed position of MovieDetail in responsive query

--- a/src/components/MovieDetail/MovieDetail.css
+++ b/src/components/MovieDetail/MovieDetail.css
@@ -43,13 +43,8 @@
   .MovieDetail--visible {
     display: flex;
     flex-flow: column nowrap;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
     background-color: white;
-    z-index: 300;
+    min-height: 100vh;
     padding: 50px 10px 10px;
   }
   .MovieDetail__title {
